Tue Dec  2 23:32:12 2003  Tim Janik  <timj@gtk.org>

	* gbsearcharray.h: added g_bsearch_array_remove_node() which is a simple
	convenience function for g_bsearch_array_remove() and
	g_bsearch_array_get_index().

	* glib-extra.[hc]: added G_STRFUNC, g_strref() and g_strunref(). the
	latter two keep reference counts on duplicated strings to avoid gross
	memory duplication for often referenced strings.

Sat Nov 29 06:22:36 2003  Tim Janik  <timj@gtk.org>

	* glib-extra.h: implemented GBitMatrix, a couple inline functions to
	allow quick operations on a two dimensional bit array.

Fri Nov 28 03:37:16 2003  Tim Janik  <timj@gtk.org>

	* glib-extra.h: preserve type safety in convenience functions for c++.

Fri Nov 28 02:57:56 2003  Tim Janik  <timj@gtk.org>

	* sfidl-cxx.cc: remove bogus generated includes.

Fri Nov 28 00:49:15 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-cxx.*: Records, sequences, choices, classes are covered now.
	So its reasonably usable binding (which can handle bse/bse.idl).

	* sfidl-generator.*: New createTypeCode model: MODEL_VCALL_CARG.
	Comments. Seperated choice conversion into a seperate function.

Thu Nov 27 00:55:40 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-cxx.*: New files: initial check-in of the C++ language binding.

	* Makefile.am: Added sfidl-cxx.*.

	* sfidl-generator.*: Moved more functionality to the base class, so
	that the C++ language binding can use it. Qt binding available again.

	* sfidl-options.* sfidl.cc: The target is now an enum. New --mixed and
	--lower options to specify the style of the identifiers used in the
	binding.

Wed Nov 26 22:07:49 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-generator.*: Moved common functionality of all C / C++
	language bindings into new parent class CodeGeneratorCBase. "Proxy" no
	longer accepted as type.

	* sfidl-parser.*: Added Parser::typeOf method returning an enum (moved
	from sfidl-module.cc).
